# lilto

./: .env.example  .gitignore  AGENTS.md  README.md  electrobun.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.renderer.json  vite.config.ts
docs/: cef-crash-repro.md  heartbeat-assistant.md  implementation-notes.md  manual-test.md  release-automation.md  skills-workspace-policy.md  ui-porting-guidelines.md  windows-sandbox-security-policy.md
native/scheduler-daemon/: Cargo.toml
native/scheduler-daemon/src/: main.rs
native/speech-transcriber/: Cargo.toml  Info.plist  main.swift
native/speech-transcriber/src/: main.rs
openspec/: config.yaml
scripts/: build-native.js  command-compat.js  e2e-cdp-command.js  e2e-electrobun-agent-browser.js  e2e-electrobun-agent-skills-live.js  e2e-electrobun-cdp-probe.js  e2e-electron-agent-browser.js  e2e-electron-agent-skills-live.js  e2e-electron-liltobook-live.js  e2e-proxy-fixture.js  electron-playwright.js  install-vs-build-tools.ps1  live-ui-manual-verification.js  package-release.js  prepare-build-assets.js  prepare-release.js  publish-release.js  release-common.js  render-build-icon-electron.js  render-runtime-icons-electron.js  sync-skill-creator.js  verify-dist-artifacts.js  windows-sandbox-live-test.js
src/: preload.ts
tasks/: lessons.md
test/: agent-loop-state.test.js  agent-runtime.test.js  agent-skills-ui-contract.test.js  app-paths.test.js  auth-service.test.js  badge-bitmap.test.js  bash-policy.test.js  codex-app-server-client.test.js  cron-mcp-contract.test.js  cron-tool.test.js  (+26 more)
(+279 files in other folders)
