[package]
name = "scheduler-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
cron = "0.15"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "io-std", "time", "sync"] }
tokio-cron-scheduler = "0.13"
uuid = { version = "1", features = ["v4", "serde"] }
